--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "dotenv": "^16.0.0",
+    "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
