--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -5,8 +5,7 @@
   },
   "extends": [
     "google",
-    "prettier",
-    "import"
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -14,7 +13,9 @@
     "sourceType": "module"
   },
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "prettier",
+    "import"
   ],
   "rules": {
     "prettier/prettier": [
