chore: turn off jsdoc rule
MODULE-2-PART-2-node

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -21,6 +21,7 @@
     "prettier/prettier": [
       "error"
     ],
+    "require-jsdoc": "off",
     "import/prefer-default-export": "off",
     "import/no-unresolved": "off",
     "import/extensions": "off"
