build: edit ts root dir
MODULE-2-PART-2-node

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,7 +16,7 @@
     "target": "ES2019",
     "lib": ["ES2019", "esnext.asynciterable", "DOM"],
     "outDir": "dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "baseUrl": "./src",
   },
   "exclude": ["node_modules", "dist", ".git"]
