--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "author": "stansful <stansful@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc -p tsconfig.json",
     "format": "prettier --write src/**/*",
