--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc -p tsconfig.json",
     "format": "prettier --write src/**/*",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "copy:static": "cd .. && npm run build:frontend && npm run copy"
   },
   "dependencies": {},
   "devDependencies": {
